# rtaudio-rs

./: Cargo.toml  Cross.toml  README.md
examples/: enumerate.rs  handle_error.rs  loopback.rs  playback_sine.rs
rtaudio-sys/: Cargo.toml  build.rs
src/: buffer.rs  device_info.rs  enums.rs  error.rs  ffi_utils.rs  host.rs  lib.rs  options.rs  stream.rs  wrapper.rs
