[package]
name = "rtaudio"
version = "0.3.6"
edition = "2021"
authors = ["Billy Messenger <billydm@noreply.codeberg.org>"]
description = "Safe Rust wrapper and bindings for RtAudio"
license = "MIT"
repository = "https://codeberg.org/Meadowlark/rtaudio-rs"
readme = "README.md"
documentation = "https://docs.rs/rtaudio"
keywords = ["audio", "sound", "rtaudio"]
categories = ["multimedia::audio", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coreaudio", "alsa", "pulse", "oss", "wasapi", "ds"]
coreaudio = ["rtaudio-sys/coreaudio"]
alsa = ["rtaudio-sys/alsa"]
jack_linux = ["rtaudio-sys/jack_linux"]
pulse = ["rtaudio-sys/pulse"]
oss = ["rtaudio-sys/oss"]
asio = ["rtaudio-sys/asio"]
wasapi = ["rtaudio-sys/wasapi"]
ds = ["rtaudio-sys/ds"]

[workspace]
members = [
    "rtaudio-sys"
]

[dependencies]
rtaudio-sys = { path = "rtaudio-sys", version = "0.3.6", default-features = false }
bitflags = "2.3"
lazy_static = "1.4"
log = "0.4"
