[package]
name = "rtaudio"
version = "0.3.7"
edition = "2021"
authors = ["Billy Messenger <billydm@noreply.codeberg.org>"]
description = "Safe Rust wrapper and bindings for RtAudio"
license = "MIT"
repository = "https://codeberg.org/Meadowlark/rtaudio-rs"
readme = "README.md"
documentation = "https://docs.rs/rtaudio"
keywords = ["audio", "sound", "rtaudio"]
categories = ["multimedia::audio", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coreaudio", "alsa", "pulse", "oss", "wasapi", "ds", "tracing"]
coreaudio = ["rtaudio-sys/coreaudio"]
alsa = ["rtaudio-sys/alsa"]
jack_linux = ["rtaudio-sys/jack_linux"]
pulse = ["rtaudio-sys/pulse"]
oss = ["rtaudio-sys/oss"]
asio = ["rtaudio-sys/asio"]
wasapi = ["rtaudio-sys/wasapi"]
ds = ["rtaudio-sys/ds"]
serde = ["dep:serde", "bitflags/serde"]
# Use the `tracing` crate for logging.
tracing = ["dep:tracing"]
# Use the `log` crate for logging.
log = ["dep:log"]

[workspace]
members = [
    "rtaudio-sys"
]

[dependencies]
rtaudio-sys = { path = "rtaudio-sys", version = "0.3.6", default-features = false }
bitflags = "2.10"
lazy_static = "1.5"
tracing = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.22"