[package]
name = "rtaudio"
version = "0.8.0"
edition = "2021"
authors = ["Billy Messenger <billydm@noreply.codeberg.org>"]
description = "Safe Rust wrapper and bindings for RtAudio"
license = "MIT"
repository = "https://codeberg.org/Meadowlark/rtaudio-rs"
readme = "README.md"
documentation = "https://docs.rs/rtaudio"
keywords = ["audio", "sound", "rtaudio"]
categories = ["multimedia::audio", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coreaudio", "alsa", "pulse", "wasapi", "ds", "tracing"]
# Enables the CoreAudio backend on MacOS
coreaudio = ["rtaudio-sys/coreaudio"]
# Enables the ALSA backend on Linux
alsa = ["rtaudio-sys/alsa"]
# Enables the Jack backend on Linux
jack_linux = ["rtaudio-sys/jack_linux"]
# Enables the PulseAudio backend on Linux
pulse = ["rtaudio-sys/pulse"]
# Enables the Open Sound System backend on Linux
oss = ["rtaudio-sys/oss"]
# Enables the ASIO backend on Windows
asio = ["rtaudio-sys/asio"]
# Enables the WASAPI backend on Windows
wasapi = ["rtaudio-sys/wasapi"]
# Enables the DirectSound backend on Windows
ds = ["rtaudio-sys/ds"]
# Enable serialization/deserialization of types
serde = ["dep:serde", "bitflags/serde"]
# Use the `tracing` crate for logging
tracing = ["dep:tracing"]
# Use the `log` crate for logging
log = ["dep:log"]

[workspace]
members = [
    "rtaudio-sys"
]

[dependencies]
rtaudio-sys = { path = "rtaudio-sys", version = "0.3.6", default-features = false }
bitflags = "2.10"
thiserror = "2"
tracing = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.22"